app/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orderit
  labels:
    name: orderit
    environment: production
