app/k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: orderit
  labels:
    app: backend
    tier: api
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4000
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
  selector:
    app: backend
    tier: api
  sessionAffinity: None
